--- a/.github/main.yml
+++ b/.github/main.yml
@@ -10,7 +10,10 @@ jobs:
       - run: echo "${{ github.event_name }} foi disparado"
       - run: echo " No ${{runner.os}}"
       - run: echo " Repositorio ${{github.repository}} na branch ${{github.ref}}"
-      
+      - run: timedatectl
+      - run: ls -la       
+
+
       - name: Checkout o repositorio
         uses: actions/checkout@v3
       
@@ -20,3 +23,28 @@ jobs:
         run: echo "${{ github.event_name }} foi disparado"
       - name: listando conteudo
         run: ls -la ${{ github.workspace }}
+
+web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 20
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'
+      
+    - name: 🔨 Build Project
+      run: |
+        npm install
+        npm run build
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.server }}
+        username: ${{ secrets.user }}
+        password: ${{ secrets.password }}
+        server-dir: applications/teste1/
