--- a/.github/main.yml
+++ b/.github/main.yml
@@ -24,27 +24,29 @@ jobs:
       - name: listando conteudo
         run: ls -la ${{ github.workspace }}
 
-web-deploy:
+  web-deploy:
     name: 🎉 Deploy
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v3
-
-    - name: Use Node.js 20
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
+ 
+      - name: Use Node.js 20
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
       
-    - name: 🔨 Build Project
-      run: |
-        npm install
-        npm run build
+      - name: 🔨 Build Project
+      - run: |
+          npm install
+          npm run build
     
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      with:
-        server: ${{ secrets.server }}
-        username: ${{ secrets.user }}
-        password: ${{ secrets.password }}
-        server-dir: applications/teste1/
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.server }}
+          username: ${{ secrets.user }}
+          password: ${{ secrets.password }}
+          server-dir: applications/teste1/
+
