--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on: [push]
  
 jobs:
   primeiro:
+    name: 🎉 Teste ambiente
     runs-on: ubuntu-latest
     steps:
       - run: echo "${{ github.event_name }} foi disparado"
@@ -26,3 +27,28 @@ jobs:
         run: ls -la ${{ github.workspace }}
 
  
+  web-deploy:
+    name: 🎉 Deploy
+    permissions: write-all
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
+ 
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      
+      - name: 🔨 Build Project
+      - run: |
+          npm install
+          npm run build
+    
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.server }}
+          username: ${{ secrets.user }}
+          password: ${{ secrets.password }}
+          server-dir: applications/teste1/
