--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
  
   web-deploy:
-    needs: Teste_ambiente
+    needs: primeiro
     name: 🎉 Deploy
     permissions: write-all
     runs-on: ubuntu-latest
