--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       - name: 🔨 Build Project
         run: |
           npm install
-          npm run build
+        #  npm run build
     
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
